# KamiBot

./: .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
dockerfiles/: Dockerfile.admin  Dockerfile.client  Dockerfile.migrator  Dockerfile.vpn
kami/: __init__.py  __main__.py  common.py  logging_settings.py  run.py  settings.py
kami/backend/: __init__.py  client.py  utils.py
kami/backend/getaways/: __init__.py
kami/backend/infra/: __init__.py
kami/backend/presentation/: client.py  dependencies.py  exceptions.py  ucf.py
kami/backend/repos/: __init__.py  dependencies.py
kami/bot/: __init__.py  run.py
kami/bot/common/: setup_bot.py
kami/bot/handlers/: __init__.py  start.py
kami/bot/middlewaries/: custom_middlewaries.py
kami/bot/states/: fsm_sending.py
kami/bot_admin/: __init__.py  __main__.py  run.py
kami/bot_admin/common/: __init__.py  multiple_sending.py  run.py  setup_bot.py
kami/bot_admin/enums/: sending_method.py  template_type.py
kami/bot_admin/handlers/: __init__.py  add_user.py  getid.py  sending.py  start.py
kami/bot_admin/keyboards/: add_user.py  sending_confirming.py  sending_methods.py  start.py
kami/bot_admin/middlewaries/: admin_midlewarie.py  custom_middlewaries.py
kami/bot_admin/states/: __init__.py  sending.py
kami/bot_admin/web/: app.py  router.py
kami/bot_client/: __main__.py  run.py
kami/prompts/: continue_dialog  dialogue  exceptions_dialog  lang_test  lang_test_reply  lang_test_result  return_to_dialog  start_dialog  start_dialogue  translator
scripts/: entrypoint.vpn.sh  entypoint.admin.sh  entypoint.client.sh  entypoint.sh
vpn/: __init__.py  __main__.py  settings.py
(+113 files in other folders)
