[tool.poetry]
name = "kami"
version = "0.1.0"
description = "Bot for Kami that will help teach students."
authors = ["Eugene Denkevich <e.denkevich@data-light.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.7.0"
pydantic-settings = "2.3.1"
sqlalchemy = "2.0.34"
alembic = "1.13.2"
asyncpg = "0.29.0"
py-mon = "2.0.5"
babel = "2.16.0"
elevenlabs = "1.9.0"
openai = "1.47.0"
pyttsx3 = "2.97"
httpx = {extras = ["socks"], version = "0.27.2"}
pydub = "0.25.1"
ffmpeg = "1.4"
fastapi = "0.115.0"
uvicorn = "0.31.0"

[tool.poetry.group.linters.dependencies]
pre-commit = "3.7.1"
ruff = "0.4.8"
mypy = "1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",
    "C",
    "E",
    "T10",
    "T20",
    "Q",
    "RET",
    "I"
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"example/" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = [
    "backend",
]
